--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -3,19 +3,70 @@ body{
   background-color: snow;
 }
 header{
-  background-color: paleturquoise;
+  background-color: #505050;
   display: flex;
 }
 header img{
-  height: 20%;
-  width: 15%;
+  height: 15%;
+  width: 10%;
 }
+body {
+font-family: 'Montserrat', sans-serif;}
+
+* {
+  box-sizing: border-box;
+}
+form.example{
+  display: flex;
+  height: 20px;
+  width: 950px;
+}
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 2px solid #224B12;
+  float: left;
+  font-family: 'Montserrat', sans-serif;
+  background: snow;
+  margin-top: 50px;
+  margin-left: 150px;
+  height: 40px;
+  width: 550px;
+}
+
+form.example button {
+  float: left;
+  width: 15%;
+  padding: 8px;
+  padding-bottom:  28px;
+  background: #224B12;
+  color: snow;
+  font-size: 17px;
+  border: 2px solid #224B12;
+  border-left: none;
+  cursor: pointer;
+  margin-top: 50px;
+
+
+}
+
+form.example button:hover {
+  background: lightgrey;
+}
+
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
 
 .panier{
   height: 8%;
   width: 8%;
-  margin-top: 55px;
-  margin-left: 900px;
+  margin-top: 25px;
+  margin-left: 0px;
   margin-right: 50px;
   transition: transform .2s; /* Animation */
 }
@@ -23,14 +74,15 @@ header img{
   transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 .portfolio-experiment {
-  background: paleturquoise;
+  background: #505050;
   margin-left: px;
   float:  right;
-  margin-top: 70px;
+  margin-top: 30px;
+
 
 }
 .portfolio-experiment a {
-  color: #224B12;
+  color: snow;
   padding: 0.7em calc(0.7em * 1.2);
   display: inline-block;
   border: 3px solid transparent;
@@ -38,9 +90,11 @@ header img{
   font-size: 1.5em;
   cursor: pointer;
   letter-spacing: 0.07em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 .portfolio-experiment a .text {
-  font-family: indie flower;
+  font-family: 'Montserrat', sans-serif;
   transform: translate3d(0, 0.7em, 0);
   display: block;
   transition: transform 0.4s cubic-bezier(0.2, 0, 0, 1) 0.4s;
