--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -24,7 +24,7 @@ form.example{
 form.example input[type=text] {
   padding: 10px;
   font-size: 17px;
-  border: 2px solid #224B12;
+  border: 2px solid snow;
   float: left;
   font-family: 'Montserrat', sans-serif;
   background: snow;
@@ -32,6 +32,9 @@ form.example input[type=text] {
   margin-left: 150px;
   height: 40px;
   width: 550px;
+  border-radius:  40px 0  0 40px;
+  font-weight: bold;
+  font-style: italic;
 }
 
 form.example button {
@@ -39,19 +42,20 @@ form.example button {
   width: 15%;
   padding: 8px;
   padding-bottom:  28px;
-  background: #224B12;
-  color: snow;
+  background: snow;
+  color: #505050;
   font-size: 17px;
-  border: 2px solid #224B12;
+  border: 2px solid snow;
   border-left: none;
   cursor: pointer;
   margin-top: 50px;
+  border-radius: 0 40px  40px 0;
 
 
 }
 
 form.example button:hover {
-  background: lightgrey;
+  background: snow;
 }
 
 form.example::after {
@@ -77,7 +81,7 @@ form.example::after {
   background: #505050;
   margin-left: px;
   float:  right;
-  margin-top: 30px;
+  margin-top: 35px;
 
 
 }
@@ -87,9 +91,9 @@ form.example::after {
   display: inline-block;
   border: 3px solid transparent;
   position: relative;
-  font-size: 1.5em;
+  font-size: 1.2em;
   cursor: pointer;
-  letter-spacing: 0.07em;
+  letter-spacing: 0.02em;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
 }
