--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -180,3 +180,57 @@ form.example::after {
   transition: transform 0.5s cubic-bezier(0, 0.53, 0.29, 1) 0.56s;
   transform-origin: left;
 }
+
+
+.menu,
+.menu ul { /* Pour les sous-menus */
+list-style-type: none;
+margin: 0px;
+padding: 0px;
+}
+.menu{
+  width: 300px;
+  height: 8000px;
+}
+.menu ul {
+display: none;
+}
+.menu li {
+position: relative;
+}
+.menu a {
+display: block;
+width: 120px;
+height: 40px;
+line-height: 30px;
+padding: 3px 10px;
+text-align: center;
+font-family: 'Montserrat', sans-serif;
+}
+.menu li:hover ul {
+display: block ;
+position: absolute;
+top: 36px;
+left: 0px;
+z-index: 100;
+}
+/* Gestion des couleurs */
+.menu li {
+  background-color: #505050; /* Couleur d'arriere-plan du menu */
+}
+
+.menu li:hover {
+  background-color: #505050 ; /* Couleur d'arriere-plan du menu au survol */ }
+.menu li:hover a {
+  color: #fff; /* Couleur du texte du menu au survol */
+}
+.menu ul li {
+  background-color: #505050; /* Couleur d'arriere-plan des sous-menu */
+}
+.menu ul li:hover {
+  background-color: #505050; /* Couleur d'arriere-plan des sous-menu au survol */ }
+.menu ul li a {
+color: snow; /* Couleur du texte des sous-menu */ }
+.menu ul li:hover a {
+  color: snow; /* Couleur du texte des sous-menu au survol */
+}
