--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -187,15 +187,21 @@ form.example::after {
 list-style-type: none;
 margin: 0px;
 padding: 0px;
+
+
+
+
 }
 .menu{
   width: 300px;
-  height: 8000px;
-padding-bottom: 50px;
+  height: px;
+  padding-bottom: 50px;
+  padding-top: 5px;
+  margin-right: 0px;
 
 }
 .menu ul {
-display: none;
+  display: none;
   margin-right: 300px;
 }
 .menu li {
@@ -214,9 +220,10 @@ font-family: 'Montserrat', sans-serif;
 .menu li:hover ul {
 display: block ;
 position: absolute;
-top: 36px;
-left: 0px;
+top: 0px;
+left: 300px;
 z-index: 100;
+
 }
 /* Gestion des couleurs */
 .menu li {
@@ -229,7 +236,7 @@ z-index: 100;
 
 }
 .menu li:hover {
-  background-color: #505050 ; /* Couleur d'arriere-plan du menu au survol */ }
+background-color: #303030 ; /* Couleur d'arriere-plan du menu au survol */ }
 .menu li:hover a {
   color: #fff; /* Couleur du texte du menu au survol */
 }
@@ -237,7 +244,7 @@ z-index: 100;
   background-color: #505050; /* Couleur d'arriere-plan des sous-menu */
 }
 .menu ul li:hover {
-  background-color: #505050; /* Couleur d'arriere-plan des sous-menu au survol */ }
+background-color: #303030; /* Couleur d'arriere-plan des sous-menu au survol */ }
 .menu ul li a {
 color: snow; /* Couleur du texte des sous-menu */ }
 .menu ul li:hover a {
