--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -250,3 +250,76 @@ color: snow; /* Couleur du texte des sous-menu */ }
 .menu ul li:hover a {
   color: snow; /* Couleur du texte des sous-menu au survol */
 }
+
+
+a {
+	color:#222222;
+	text-decoration: none;
+}
+a:visited{
+	color:#222222;
+	text-decoration: none;
+}
+body{
+	background-color:#222222;
+	color: black;
+	font-family: "Segoe UI", Verdana, serif;
+	font-size:12pt;
+	margin:0;
+	padding:0;
+	position:relative;
+}
+.menu2{
+  display: flex;
+}
+
+#corps{
+	float:left;
+	width: 100%;
+	background-color:#EDEDED;
+}
+#menu{
+  position: absolute;
+	float : left;
+	width: 20%;
+	min-height:355px;
+	margin-left: 3px;
+	color:#222222;
+	font-size:15px;
+}
+#menu p{
+	font-weight:bold;
+}
+#menu a{
+	color:#222222;
+	text-decoration: none;
+}
+#menu a :visited{
+	color:#222222;
+	text-decoration: none;
+}
+#menuInt{
+	margin-top: 2px;
+	margin-left: 50px;
+	min-height:367px;
+}
+#texte{
+	float:left ;
+	width: 79%;
+	margin-left: 5px;
+	text-align: center;
+	min-height:380px;
+	color:#222222;
+}
+
+
+label{
+	font-size:12pt;
+    font-weight:bold;
+}
+h1{
+	text-shadow:1px 1px 2px #333333;
+}
+* a:hover{
+	text-decoration: underline;
+}
