--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -384,12 +384,22 @@ h4{
 
 footer .gauche {
     float:left;
-    width:60%;
-    margin-left: 10px;
+    margin-left: 10%;
 }
 footer .droite {
-    padding-top: 28%;
-    margin-left:60%
+    padding-top: 32%;
+    margin-left:80%
+}
+footer .mention{
+  padding-top: 32%;
+  margin-left: 28%;
+  color:snow;
+}
+
+footer .moyenPaiement{
+  margin-left: 55%;
+  margin-top: -8%;
+  color:snow;
 }
 
 .facebook {
@@ -398,4 +408,10 @@ footer .droite {
 
 .bandeau{
   background-color:#EDEDED;
+}
+
+.mention{
+  position: absolute;
+  margin-top: 1%;
+  margin-left: 31%;
 }
