--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -36,7 +36,7 @@ form.example input[type=text] {
   border-radius:  40px 0  0 40px;
   font-weight: bold;
   font-style: italic;
-  color :red;
+  color :#101010;
 }
 
 form.example button {
@@ -196,15 +196,11 @@ marquee{
 }
 
 
-
 .menu,
 .menu ul { /* Pour les sous-menus */
 list-style-type: none;
 margin: 0px;
 padding: 0px;
-
-
-
 
 }
 .menu{
@@ -373,11 +369,14 @@ h4{
   text-decoration: underline;
   text-decoration-color: snow;
 }
-
-.facebook{
-  width:40px;
+h5{
+  margin-left: 100px;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
+  color:snow;
+  display: flex;
 }
-
 .fin{
   display: flex;
 }
@@ -404,6 +403,12 @@ footer .moyenPaiement{
 
 .facebook {
   margin-left: 35px;
+  width:40px;
+  transition: transform .2s; /* Animation */
+}
+.facebook:hover{
+  transform: scale(1.6); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+
 }
 
 .bandeau{
