--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -196,11 +196,15 @@ marquee{
 }
 
 
+
 .menu,
 .menu ul { /* Pour les sous-menus */
 list-style-type: none;
 margin: 0px;
 padding: 0px;
+
+
+
 
 }
 .menu{
@@ -369,14 +373,11 @@ h4{
   text-decoration: underline;
   text-decoration-color: snow;
 }
-h5{
-  margin-left: 100px;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-  font-size: 17px;
-  color:snow;
-  display: flex;
+
+.facebook{
+  width:40px;
 }
+
 .fin{
   display: flex;
 }
@@ -395,21 +396,20 @@ footer .mention{
   color:snow;
 }
 
-footer .moyenPaiement{
-  margin-left: 55%;
-  margin-top: -8%;
+.moyenPaiement{
+  position: absolute;
+  top:87%;
+  left:47%;
   color:snow;
 }
 
 .facebook {
-  margin-left: 35px;
-  width:40px;
-  transition: transform .2s; /* Animation */
-}
-.facebook:hover{
-  transform: scale(1.6); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  margin-left: 35px;  transition: transform .2s; /* Animation */
+  }
+  .facebook:hover {
+    transform: scale(1.7); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
 
-}
 
 .bandeau{
   background-color:#EDEDED;
@@ -419,4 +419,19 @@ footer .moyenPaiement{
   position: absolute;
   margin-top: 1%;
   margin-left: 31%;
+}
+
+.visa{
+  width: 75px;
+}
+
+.paypal{
+  width:150px;
+}
+
+.visaelec{
+  position: absolute;
+  top:88%;
+  left:60%;
+  width:75px;
 }
