--- a/TP3/css/stylesheet.css
+++ b/TP3/css/stylesheet.css
@@ -386,8 +386,8 @@ footer .gauche {
     float:left;
     margin-left: 10%;
 }
-footer .droiteBas {
-    margin-top: 33%;
+footer .droite {
+    padding-top: 32%;
     margin-left:80%
 }
 footer .mention{
@@ -397,21 +397,19 @@ footer .mention{
 }
 
 .moyenPaiement{
+  position: absolute;
+  top:87%;
+  left:47%;
   color:snow;
 }
 
 .facebook {
-<<<<<<< HEAD
   margin-left: 35px;
+	margin-left: 35px;  transition: transform .2s; /* Animation */
 }
-=======
-  margin-left: 35px;  transition: transform .2s; /* Animation */
-  }
-  .facebook:hover {
+.facebook:hover {
     transform: scale(1.7); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
-
->>>>>>> a
 
 .bandeau{
   background-color:#EDEDED;
@@ -423,8 +421,17 @@ footer .mention{
   margin-left: 31%;
 }
 
-.mentionBas{
+.visa{
+  width: 75px;
+}
+
+.paypal{
+  width:150px;
+}
+
+.visaelec{
   position: absolute;
-  bottom:0px;
-  left:50%;
+  top:88%;
+  left:60%;
+  width:75px;
 }
